2006-09-29  Kim F. Storm  <storm@cua.dk>

	* ido.el (ido-file-internal): Only bind minibuffer-completing-file-name
	to t while calling ido-read-internal.

2006-09-29  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el (org-file-remote-p): Get regexp from list.
	(org-archive-subtree): remove erraneous `]' from character list.

2006-09-28  Jonathan Yavner  <jyavner@member.fsf.org>

	* ses.el (ses-in-print-area, ses-goto-data, ses-load)
	(ses-reconstruct-all): Make undo of "insert row" work by keeping
	markers for data-area and parameters-area.

2006-09-28  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/make-mode.el (makefile-mode): Don't disable jit-lock.

	* font-lock.el (font-lock-after-change-function): Refontify next line
	as well if end is at BOL.
	(font-lock-extend-jit-lock-region-after-change): Be more careful to
	only extend the region as much as needed.

2006-09-28  Richard Stallman  <rms@gnu.org>

	* comint.el (comint-mode): Bind font-lock-defaults non-nil.

	* subr.el (insert-for-yank-1): Handle `font-lock-face' specially.

	* international/mule.el (after-insert-file-set-coding):
	If VISIT, don't let set-buffer-multibyte make undo info.

2006-09-28  Osamu Yamane  <yamane@green.ocn.ne.jp> (tiny change)

	* mail/smtpmail.el (smtpmail-try-auth-methods): Do not break long
	lines in base64-encoded authentication response.

2006-09-26  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* progmode/ebnf2ps.el: Doc fix. Implement arrow spacing and scaling.
	(ebnf-version): New version 4.3.
	(ebnf-arrow-extra-width, ebnf-arrow-scale): New options.
	(ebnf-prologue): Adjust PostScript programming.
	(ebnf-begin-file, ebnf-insert-ebnf-prologue, ebnf-terminal-dimension1)
	(ebnf-repeat-dimension, ebnf-except-dimension): Adjust code.

2006-09-26  Stefan Monnier  <monnier@iro.umontreal.ca>

	* jit-lock.el (jit-lock-force-redisplay): Rename from
	jit-lock-fontify-again, and undo the mistaken change I've just done.
